# bf-mobilemoney

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  setup.py
mobilemoney/: __init__.py  base.py  ligdicash.py  moovmoney.py  orangemoney.py  requirements.txt  utils.py
test/: dev_payment_test.py  main.py
