[tool.poetry]
name = "bf-mm"
version = "0.0.1"
description = ""
authors = ["Muhammed Zeba <parice02@hotmail.com>"]
readme = "README.md"
packages = [{ include = "mobilemoney" }]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
